Changed site theme to THX
added more in doc and demo

--- a/demo/_posts/2013-12-17-button.md
+++ b/demo/_posts/2013-12-17-button.md
@@ -1,15 +1,13 @@
 ---
-layout: default
-title: button.css
+layout: post
+title: Button.css
 ---
-
-## Button
 
 按钮是网站，尤其是重表单页面最常用的元素， Cube 整理了很精致的按钮形式，先引入样式：
 
 {% include cubeUsage.html %}
 
-### 普通按钮
+## 普通按钮
 
 对浮动元素加上 btn 即可：
 
@@ -24,7 +22,7 @@ title: button.css
 <a class="btn" href="javascript:void(0);">Step In</a>
 
 
-### 带 iconfont 的按钮
+## 带 iconfont 的按钮
 
 ```html
 <button class="btn"><i class="iconfont">&#444;</i>Step In</button>
@@ -36,7 +34,7 @@ title: button.css
 <button class="btn"><i class="iconfont">&#444;</i>Step In</button>
 <a class="btn" href="javascript:void(0);"><i class="iconfont">&#444;</i>Step In</a>
 
-### 按钮组合
+## 按钮组合
 
 ```html
 <div class="btn-group">
@@ -70,7 +68,7 @@ title: button.css
   <a class="btn" href="javascript:void(0);">Step4</a>
 </div>
 
-### 各色按钮
+## 各色按钮
 
 ```html
 <button class="btn btn-red">Step In</button>
@@ -95,8 +93,7 @@ title: button.css
 <a class="btn btn-blue" href="javascript:void(0);">Step In</a>
 
 
-
-### 禁用按钮
+## 禁用按钮
 
 ```html
 <button class="btn btn-blue">Step In</button>
@@ -109,7 +106,7 @@ title: button.css
 <a class="btn btn-disabled" href="javascript:void(0);">Step In</a>
 <div class="ellipsis">我是个蒸不烂煮不熟捶不扁炒不爆响珰珰一粒铜豌豆，恁子弟每谁教你钻入他锄不断斫不下解不开顿不脱慢腾腾千层锦套头。</div>
 
-### 按钮大小
+## 按钮大小
 
 ```html
 <button class="btn btn-size45"><i class="iconfont">&#444;</i>Step In</button>
@@ -124,6 +121,7 @@ title: button.css
 <button class="btn btn-size28"><i class="iconfont">&#444;</i>Step In</button>
 <button class="btn btn-small"><i class="iconfont">&#444;</i>Step In</button>
 ```
+
 将输出：
 
 <button class="btn btn-size45"><i class="iconfont">&#444;</i>Step In</button>
