--- a/demo/_posts/2013-12-17-layout.md
+++ b/demo/_posts/2013-12-17-layout.md
@@ -1,14 +1,14 @@
 ---
-layout: default
+layout: post
+title: Layout.css
 ---
 
-## Layout
-
-布局是网站最核心的内容组织方式，Cube 提供了一系列灵巧的布局方案（兼容 IE6+ 等主流浏览器），如下将一一介绍，当然只需要引入 Cube 样式：
+布局是网站最核心的内容组织方式，Cube 提供了一系列灵巧的布局方案（兼容 IE6+ 等主流浏览器），
+如下将一一介绍，当然只需要引入 Cube 样式：
 
 {% include cubeUsage.html %}
 
-### inline-block 组件
+## inline-block 组件
 
 让元素以 inline-block 呈现在文档流中，加上 `dib` 的 class 即可：
 
@@ -39,7 +39,7 @@ layout: default
 
 注意，这里 dib-box 内部的 dib 的 font-size 会被重置为 12px，在使用过程中可以从内部继承和覆盖成为你需要的。
 
-### 自适应两端对齐组件
+## 自适应两端对齐组件
 
 该组件依赖于上面的 inline-block 方案，使用时外层加上 justify，内部需要两端对齐的元素都加上 dib, dib 与 justify 不要同时出现：
 
@@ -57,7 +57,7 @@ layout: default
 
 更多示例，[请移步](http://jsbin.com/OsEcOMA/1)
 
-### CSS 三角形组件
+## CSS 三角形组件
 
 Cube 提供了丰富的三角形效果, 如：
 
@@ -126,7 +126,7 @@ Cube 提供了丰富的三角形效果, 如：
   </span>
 </div>
 
-### 替换元素等比缩放组件
+## 替换元素等比缩放组件
 
 主要用于视频网站，不同的视频网站由于控制栏高度不同，需要 JS 配合添加对应的 class。
 
@@ -201,7 +201,7 @@ Cube 提供了丰富的三角形效果, 如：
   <embed class="youtube" src="" type="">
 </div>
 
-### 未知高度垂直居中组件
+## 未知高度垂直居中组件
 
 网站中，尤其图片类型网站，图片垂直居中是常见的场景，Cube 给出了一套兼容性良好的图片垂直居中方案，该方案同时支持单行、多行文字，以及图文混排：
 
