Add table of content

--- a/doc/_posts/2013-12-17-type.md
+++ b/doc/_posts/2013-12-17-type.md
@@ -3,20 +3,20 @@ layout: post
 title: Type.css
 ---
 
-## Type.css 为中文排版而生
+## 为中文排版而生
 
 国外现有的 <abbr title="Cascading Style Sheets">CSS</abbr> 解决方案（例如：
 Bootstrap，Normalize，CSS Reset 等）都不会考虑针对中文排版做优化，Type.css 就是为了
 解决这个问题而生，以 neat.css 为基础，让普通使用者无需考虑排版细节，快速应用到博客、文章
 等大面积中文排版的地方。
 
-## 中文排版有如下几个难点：
+### 中文排版有如下几个难点：
 
 1. 网页中可用简体中文字体较少，字体字号的选择尤为重要
 2. 不同浏览器及操作系统的渲染差异
 3. 特定 HTML 标签在中文排版中的用法，例如 <u>专名号</u> <a href="{{ site.baseurl }}/demo/type/#u">&lt;u&gt;</a>
 
-## Type.css 做了如下优化
+### Type.css 做了如下优化
 
 1. 默认字号设为14px，更加便于阅读
 2. 字体根据不同的操作系统和浏览器做最佳适配：
