--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -1,38 +1,214 @@
 ---
 layout: post
-title: Neat.css
+title: neat.css
 ---
 
-## 跨平台的 font-family
+neat.css 是基于「[normalize[(https://github.com/necolas/normalize.css)」的全新的 CSS Rest，兼容 IE 6+ 以及其他现代浏览器。
 
-TODO：说明 font-family 选择依据
+「normalize」的核心理念是不重置为0，让元素拥有统一的默认间距，大小等表现。但针对国内大部分网站不是纯文字排版，neat.css 选择回归「有即是无，无即是有」的理念，把大部分标签的默认`margin`，`padding` 均重置为 0。如果你需要对大面积文字或者文档快速美化，推荐单独引入专门针对汉字排版的[type.css](#)。
 
-## 注意事项
+# neat.css 解决的问题
 
-假如你的项目之前采用的是 Brix Style，甚或更早的 KISSY Reset，转到 Cube 时有如下注意事项：
+1. 解决Bug，特别是低级浏览器的常见Bug。
+2. 统一效果，但不盲目追求重置为0。
+3. 向后兼容。
+4. 考虑响应式。
+5. 考虑移动设备。
 
-### line-height
+# 特色
 
-在 Neat.css 中，`line-height` 的值为 1.8 。而在英文排版世界里，偏好的 `line-height`
-值为 1.5 ，在 Brix Style 与 KISSY Reset 中也是如此。
+## 人性化的细节处理
 
-因此假如这项改动对应影响颇多，不妨在引入 Cube 之后将 `line-height` 改回你熟悉的值：
+例如：
+
+* textarea 默认只能垂直拖动，防止宽度改变破坏布局。
+    ```css
+    textarea {
+        resize: vertical;
+    }
+    ```
+* 汉字字号小于 12px 不易阅读，为 `<small>` 元素设置默认值为 12px。
+    ```css
+    small {
+        font-size: 85.7%; /* 12/14=0.8571428571 */
+    }
+    ```
+
+* label 元素默认光标设为「手型」，暗示此处可点击。
+
+    ```css
+    label {
+        cursor: pointer;
+    }
+    ```
+
+## 考虑移动设备
+
+通常 iPhone 横屏时默认会放大文字，如果页面已经做了响应式，这可能会破坏布局，neat.css做了如下优化：
 
 ```css
-html, body {
+html {
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+}
+```
+
+## 考虑响应式
+
+IE6 以上浏览器，图片默认支持缩放。
+
+```css
+/**
+ * 1. 去除 IE6-9 和 Firefox 3 中 a 内部 img 元素默认的边框
+ * 2. 修正 IE8 图片消失bug
+ * 3. 防止 img 指定「height」时图片高度不能按照宽度等比缩放，导致图片变形
+      http://jsbin.com/aJoTUca/2
+ * 4. 让图片支持响应式
+ * 5. 去除现代浏览器图片底部的空隙
+ * 6. 修复 IE7 图片缩放失真
+ */
+img {
+    border: 0 none; /* 1 */
+    width: auto\9; /* 2 */
+    height: auto; /* 3 */
+    max-width: 100%; /* 4 */
+    vertical-align: top;/* 5 */
+    -ms-interpolation-mode: bicubic; /* 6 */
+}
+```
+
+## 跨平台最佳 font-family
+
+中文网页一直没有太多显示效果较好的字体可供选择，在「微软雅黑」之前，Windows 平台用于网页正文的简体中文字体仅有一个「中易宋体（SimSun）」。「微软雅黑」的出现似乎成了很多设计师的「救命稻草」。但「微软雅黑」自身也有诸多问题，例如：字距较小、字面宽扁、黑度偏大、字符重心不一致等。所以它实际上不适合用在大面积文字排版上，用在标题上尚可。
+
+如果误认为「微软雅黑」就是网页显示最好的字体，甚至于把 OS X
+默认简体中文也设置为「微软雅黑」（安装了 Office 后会预装「微软雅黑」），这将是很可怕的。
+
+为了避免字体混乱的局面，neat.css 统一了 `font-family` 的设置。
+
+1. 中文字体选择如下：
+
+    * Windows 优先使用「微软雅黑」，如果没有则使用「中易宋体（SimSun）」。
+    * OS X 优先使用「冬青黑体简体（Hiragino Sans GB）」，如果没有则使用默认的「华文黑体」。
+    * Linux 优先使用「文泉驿微米黑」。
+
+2. 西文字体选择如下：
+
+    * Windows 优先使用「Tahoma」。
+    * OS X 优先使用「Helvetica Neue」
+
+    ```css
+
+    /**
+     * 1. 防止元素中「font-family」不能继承
+     * 2. 西文字体和 OS X 字体写在前面
+     * 3. Opera 12.1 之前版本不支持中文字体的英文名称
+     * 4. 微软雅黑「\5FAE\8F6F\96C5\9ED1」,中易宋体「\5B8B\4F53」
+     */
+    body,
+    button, /* 1 */
+    input, /* 1 */
+    select, /* 1 */
+    textarea  /* 1 */
+    {
+        font-family: 'helvetica neue',tahoma,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;
+    }
+    ```
+
+    > 注意：IE 中部分表单元素并不能识别以上 font-family 中的「微软雅黑」，会以「中易宋体（SimSun）」显示。
+
+3. 代码字体选择如下：
+
+    * Windows 优先使用 Consolas。
+    * OS X 优先使用 Monaco。
+
+    ```css
+    code,
+    kbd,
+    pre,
+    samp {
+        font-family: monaco, menlo, consolas, 'courier new', courier, monospace;
+    }
+    ```
+
+如果开发者对所选字体没有充分了解，**不建议重新定义 `font-family`** 。
+
+## 解决表单渲染问题
+
+由于表单元素是由系统渲染的控件，其 UI 表现具有特殊性。为了尽可能减少不同平台间的差异，neat.css 中统一了大部分效果，但保留一些平台特殊的样式。比如`input[type="search"]`，保留了搜索框右边的清除按钮，方便移动设备上清除文字。
+
+```css
+/**
+ * 1.移除 OS X 中 Safari5 和 Chrome 搜索框内侧的左边距
+ * 2.如果需要隐藏清除按钮需要加上
+   input[type="search"]::-webkit-search-cancel-button
+ */
+input[type="search"]::-webkit-search-decoration /* 1 */
+{
+    -webkit-appearance: none;
+}
+````
+
+## 面向未来
+
+neat.css 中对一些浏览器的新特性也会提供支持，比如 HTML5 中新增的 `<dialog>` 元素。
+
+```css
+/**
+ * 居中 HTML5 dialog 元素
+ * Chrome 31 支持，需开启 chrome://flags/#enable-experimental-web-platform-features
+ * Chrome 28 之前、Firefox 中不支持 height:fit-content; 
+   https://src.chromium.org/viewvc/blink?revision=148314&view=revision
+ * ::backdrop 定义遮罩样式
+ * @demo: http://jsbin.com/iPACab/1
+ */
+dialog{
+    border: 1px solid;
+    padding: 0;
+    margin: auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+    height: -moz-fit-content;
+    height: -webkit-fit-content;
+    height: fit-content;
+}
+
+dialog::backdrop{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .3);
+}
+```
+
+# 定制
+
+neat.css 目前压缩后只有 4KB，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
+
+# 注意事项
+
+假如你的项目之前采用的是 Brix Style，甚或更早的 KISSY Reset，迁移到 Cube 时有如下注意事项：
+
+* 默认 `font-size: 14px`。
+* 默认 `line-height: 1.5`。
+
+之前在 Brix Style 与 KISSY Reset 中分别是 `font-size: 12px` ，`line-height: 1.5`，因此针对旧的项目如果引用`cube.css`会对布局造成一些影响，我们建议改回之前默认的：
+
+```css
+body {
+    font-size: 12px;
     line-height: 1.5
 }
 ```
 
-### font-size
-
-在 Neat.css 中，我们还将 font-size 的初始值改为 14px，对绝大多数新起项目而言，这个值更
-受欢迎，不管是需要版式设计的内容型网站，还是交互复杂的管理平台。
-
-但毕竟与之前的样式重置有所出入，所以，如果你有历史包袱要背，不妨在引入 Cube 后：
-
-```css
-html, body {
-    font-size: 12px;
-}
-```
+如果是新的项目，特别是跨平台的项目推荐直接使用更大的字号和行高，带来更加舒适的阅读体验。
