调整 neat.css 文档描述

--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: neat.css
+title: Neat.css
 ---
 
-neat.css 是基于「[normalize[(https://github.com/necolas/normalize.css)」的全新的 CSS Rest，兼容 IE 6+ 以及其他现代浏览器。
+Neat.css 是基于[normalize](https://github.com/necolas/normalize.css)的全新的 CSS Rest，兼容 IE 6+ 以及其他现代浏览器。
 
-「normalize」的核心理念是不重置为0，让元素拥有统一的默认间距，大小等表现。但针对国内大部分网站不是纯文字排版，neat.css 选择回归「有即是无，无即是有」的理念，把大部分标签的默认`margin`，`padding` 均重置为 0。如果你需要对大面积文字或者文档快速美化，推荐单独引入专门针对汉字排版的[type.css](#)。
+「normalize」的核心理念是不盲目重置为0，让元素拥有统一的默认间距，大小等表现。但针对国内大部分网站不是纯文字排版，Neat.css 选择回归「有即是无，无即是有」的理念，把大部分标签的默认`margin`，`padding` 均重置为 0。如果你需要对大面积文字或者文档快速美化，推荐单独引入专门针对汉字排版的['type.css'](#)。
 
-# neat.css 解决的问题
+# Neat.css 解决的问题
 
 1. 解决Bug，特别是低级浏览器的常见Bug。
 2. 统一效果，但不盲目追求重置为0。
@@ -22,12 +22,14 @@ neat.css 是基于「[normalize[(https://github.com/necolas/normalize.css)」的
 例如：
 
 * textarea 默认只能垂直拖动，防止宽度改变破坏布局。
+
     ```css
     textarea {
         resize: vertical;
     }
     ```
 * 汉字字号小于 12px 不易阅读，为 `<small>` 元素设置默认值为 12px。
+
     ```css
     small {
         font-size: 85.7%; /* 12/14=0.8571428571 */
@@ -44,7 +46,7 @@ neat.css 是基于「[normalize[(https://github.com/necolas/normalize.css)」的
 
 ## 考虑移动设备
 
-通常 iPhone 横屏时默认会放大文字，如果页面已经做了响应式，这可能会破坏布局，neat.css做了如下优化：
+通常 iPhone 横屏时默认会放大文字，如果页面已经做了响应式，这可能会破坏布局，Neat.css做了如下优化：
 
 ```css
 html {
@@ -85,58 +87,58 @@ img {
 如果误认为「微软雅黑」就是网页显示最好的字体，甚至于把 OS X
 默认简体中文也设置为「微软雅黑」（安装了 Office 后会预装「微软雅黑」），这将是很可怕的。
 
-为了避免字体混乱的局面，neat.css 统一了 `font-family` 的设置。
+为了避免字体混乱的局面，Neat.css 统一了 `font-family` 的设置。
 
 1. 中文字体选择如下：
 
-    * Windows 优先使用「微软雅黑」，如果没有则使用「中易宋体（SimSun）」。
-    * OS X 优先使用「冬青黑体简体（Hiragino Sans GB）」，如果没有则使用默认的「华文黑体」。
-    * Linux 优先使用「文泉驿微米黑」。
+* Windows 优先使用「微软雅黑」，如果没有则使用「中易宋体（SimSun）」。
+* OS X 优先使用「冬青黑体简体（Hiragino Sans GB）」，如果没有则使用默认的「华文黑体」。
+* Linux 优先使用「文泉驿微米黑」。
 
 2. 西文字体选择如下：
 
-    * Windows 优先使用「Tahoma」。
-    * OS X 优先使用「Helvetica Neue」
+* Windows 优先使用「Tahoma」。
+* OS X 优先使用「Helvetica Neue」
 
-    ```css
+```css
 
-    /**
-     * 1. 防止元素中「font-family」不能继承
-     * 2. 西文字体和 OS X 字体写在前面
-     * 3. Opera 12.1 之前版本不支持中文字体的英文名称
-     * 4. 微软雅黑「\5FAE\8F6F\96C5\9ED1」,中易宋体「\5B8B\4F53」
-     */
-    body,
-    button, /* 1 */
-    input, /* 1 */
-    select, /* 1 */
-    textarea  /* 1 */
-    {
-        font-family: 'helvetica neue',tahoma,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;
-    }
-    ```
+/**
+ * 1. 防止元素中「font-family」不能继承
+ * 2. 西文字体和 OS X 字体写在前面
+ * 3. Opera 12.1 之前版本不支持中文字体的英文名称
+ * 4. 微软雅黑「\5FAE\8F6F\96C5\9ED1」,中易宋体「\5B8B\4F53」
+ */
+body,
+button, /* 1 */
+input, /* 1 */
+select, /* 1 */
+textarea  /* 1 */
+{
+    font-family: 'helvetica neue',tahoma,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;
+}
+```
 
-    > 注意：IE 中部分表单元素并不能识别以上 font-family 中的「微软雅黑」，会以「中易宋体（SimSun）」显示。
+> 注意：IE 中部分表单元素并不能识别以上 font-family 中的「微软雅黑」，会以「中易宋体（SimSun）」显示。
 
 3. 代码字体选择如下：
 
-    * Windows 优先使用 Consolas。
-    * OS X 优先使用 Monaco。
+* Windows 优先使用 Consolas。
+* OS X 优先使用 Monaco。
 
-    ```css
-    code,
-    kbd,
-    pre,
-    samp {
-        font-family: monaco, menlo, consolas, 'courier new', courier, monospace;
-    }
-    ```
+```css
+code,
+kbd,
+pre,
+samp {
+    font-family: monaco, menlo, consolas, 'courier new', courier, monospace;
+}
+```
 
 如果开发者对所选字体没有充分了解，**不建议重新定义 `font-family`** 。
 
 ## 解决表单渲染问题
 
-由于表单元素是由系统渲染的控件，其 UI 表现具有特殊性。为了尽可能减少不同平台间的差异，neat.css 中统一了大部分效果，但保留一些平台特殊的样式。比如`input[type="search"]`，保留了搜索框右边的清除按钮，方便移动设备上清除文字。
+由于表单元素是由系统渲染的控件，其 UI 表现具有特殊性。为了尽可能减少不同平台间的差异，Neat.css 中统一了大部分效果，但保留一些平台特殊的样式。比如`input[type="search"]`，保留了搜索框右边的清除按钮，方便移动设备上清除文字。
 
 ```css
 /**
@@ -152,7 +154,7 @@ input[type="search"]::-webkit-search-decoration /* 1 */
 
 ## 面向未来
 
-neat.css 中对一些浏览器的新特性也会提供支持，比如 HTML5 中新增的 `<dialog>` 元素。
+Neat.css 中对一些浏览器的新特性也会提供支持，比如 HTML5 中新增的 `<dialog>` 元素。
 
 ```css
 /**
@@ -193,7 +195,7 @@ dialog::backdrop{
 
 # 定制
 
-neat.css 目前压缩后只有 4KB，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
+Neat.css 目前压缩后只有 4KB，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
 
 # 注意事项
 
