--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -195,7 +195,7 @@ dialog::backdrop{
 
 # 定制
 
-Neat.css 目前压缩后只有 4KB，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
+Neat.css 目前压缩后只有 4KB 左右，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
 
 # 注意事项
 
