标题增加编号，有序列表直接改为 ol

--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -15,9 +15,9 @@ Neat.css 是基于[normalize](https://github.com/necolas/normalize.css)的全新
 4. 考虑响应式。
 5. 考虑移动设备。
 
-# 特色
+## 1 特色
 
-## 人性化的细节处理
+### 1.1 人性化的细节处理
 
 例如：
 
@@ -44,7 +44,7 @@ Neat.css 是基于[normalize](https://github.com/necolas/normalize.css)的全新
     }
     ```
 
-## 考虑移动设备
+### 1.2 考虑移动设备
 
 通常 iPhone 横屏时默认会放大文字，如果页面已经做了响应式，这可能会破坏布局，Neat.css做了如下优化：
 
@@ -56,7 +56,7 @@ html {
 }
 ```
 
-## 考虑响应式
+### 1.3 考虑响应式
 
 IE6 以上浏览器，图片默认支持缩放。
 
@@ -80,7 +80,7 @@ img {
 }
 ```
 
-## 跨平台最佳 font-family
+### 1.4 跨平台最佳 font-family
 
 中文网页一直没有太多显示效果较好的字体可供选择，在「微软雅黑」之前，Windows 平台用于网页正文的简体中文字体仅有一个「中易宋体（SimSun）」。「微软雅黑」的出现似乎成了很多设计师的「救命稻草」。但「微软雅黑」自身也有诸多问题，例如：字距较小、字面宽扁、黑度偏大、字符重心不一致等。所以它实际上不适合用在大面积文字排版上，用在标题上尚可。
 
@@ -89,13 +89,15 @@ img {
 
 为了避免字体混乱的局面，Neat.css 统一了 `font-family` 的设置。
 
-1. 中文字体选择如下：
+<ol>
+
+<li>中文字体选择如下：
 
 * Windows 优先使用「微软雅黑」，如果没有则使用「中易宋体（SimSun）」。
 * OS X 优先使用「冬青黑体简体（Hiragino Sans GB）」，如果没有则使用默认的「华文黑体」。
 * Linux 优先使用「文泉驿微米黑」。
 
-2. 西文字体选择如下：
+<li>西文字体选择如下：
 
 * Windows 优先使用「Tahoma」。
 * OS X 优先使用「Helvetica Neue」
@@ -120,7 +122,7 @@ textarea  /* 1 */
 
 > 注意：IE 中部分表单元素并不能识别以上 font-family 中的「微软雅黑」，会以「中易宋体（SimSun）」显示。
 
-3. 代码字体选择如下：
+<li>代码字体选择如下：
 
 * Windows 优先使用 Consolas。
 * OS X 优先使用 Monaco。
@@ -133,10 +135,11 @@ samp {
     font-family: monaco, menlo, consolas, 'courier new', courier, monospace;
 }
 ```
+</ol>
 
 如果开发者对所选字体没有充分了解，**不建议重新定义 `font-family`** 。
 
-## 解决表单渲染问题
+### 1.5 解决表单渲染问题
 
 由于表单元素是由系统渲染的控件，其 UI 表现具有特殊性。为了尽可能减少不同平台间的差异，Neat.css 中统一了大部分效果，但保留一些平台特殊的样式。比如`input[type="search"]`，保留了搜索框右边的清除按钮，方便移动设备上清除文字。
 
@@ -152,7 +155,7 @@ input[type="search"]::-webkit-search-decoration /* 1 */
 }
 ````
 
-## 面向未来
+### 1.6 面向未来
 
 Neat.css 中对一些浏览器的新特性也会提供支持，比如 HTML5 中新增的 `<dialog>` 元素。
 
@@ -193,11 +196,11 @@ dialog::backdrop{
 }
 ```
 
-# 定制
+## 2 定制
 
 Neat.css 目前压缩后只有 4KB 左右，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
 
-# 注意事项
+## 3 注意事项
 
 假如你的项目之前采用的是 Brix Style，甚或更早的 KISSY Reset，迁移到 Cube 时有如下注意事项：
 
