--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -89,18 +89,17 @@ img {
 
 为了避免字体混乱的局面，Neat.css 统一了 `font-family` 的设置。
 
-<ol>
 
-<li>中文字体选择如下：
+1. 中文字体选择如下：
 
-* Windows 优先使用「微软雅黑」，如果没有则使用「中易宋体（SimSun）」。
-* OS X 优先使用「冬青黑体简体（Hiragino Sans GB）」，如果没有则使用默认的「华文黑体」。
-* Linux 优先使用「文泉驿微米黑」。
+    * Windows 优先使用「微软雅黑」，如果没有则使用「中易宋体（SimSun）」。
+    * OS X 优先使用「冬青黑体简体（Hiragino Sans GB）」，如果没有则使用默认的「华文黑体」。
+    * Linux 优先使用「文泉驿微米黑」。
 
-<li>西文字体选择如下：
+2. 西文字体选择如下：
 
-* Windows 优先使用「Tahoma」。
-* OS X 优先使用「Helvetica Neue」
+    * Windows 优先使用「Tahoma」。
+    * OS X 优先使用「Helvetica Neue」
 
 ```css
 
@@ -122,10 +121,10 @@ textarea  /* 1 */
 
 > 注意：IE 中部分表单元素并不能识别以上 font-family 中的「微软雅黑」，会以「中易宋体（SimSun）」显示。
 
-<li>代码字体选择如下：
+3. 代码字体选择如下：
 
-* Windows 优先使用 Consolas。
-* OS X 优先使用 Monaco。
+    * Windows 优先使用 Consolas。
+    * OS X 优先使用 Monaco。
 
 ```css
 code,
