修改标题书序

--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -7,7 +7,7 @@ Neat.css 是基于[normalize](https://github.com/necolas/normalize.css)的全新
 
 「normalize」的核心理念是不盲目重置为0，让元素拥有统一的默认间距，大小等表现。但针对国内大部分网站不是纯文字排版，Neat.css 选择回归「有即是无，无即是有」的理念，把大部分标签的默认`margin`，`padding` 均重置为 0。如果你需要对大面积文字或者文档快速美化，推荐单独引入专门针对汉字排版的['type.css'](#)。
 
-# Neat.css 解决的问题
+## 1 Neat.css 解决的问题
 
 1. 解决Bug，特别是低级浏览器的常见Bug。
 2. 统一效果，但不盲目追求重置为0。
@@ -15,9 +15,9 @@ Neat.css 是基于[normalize](https://github.com/necolas/normalize.css)的全新
 4. 考虑响应式。
 5. 考虑移动设备。
 
-## 1 特色
+## 2 特色
 
-### 1.1 人性化的细节处理
+### 2.1 人性化的细节处理
 
 例如：
 
@@ -44,7 +44,7 @@ Neat.css 是基于[normalize](https://github.com/necolas/normalize.css)的全新
     }
     ```
 
-### 1.2 考虑移动设备
+### 2.2 考虑移动设备
 
 通常 iPhone 横屏时默认会放大文字，如果页面已经做了响应式，这可能会破坏布局，Neat.css做了如下优化：
 
@@ -56,7 +56,7 @@ html {
 }
 ```
 
-### 1.3 考虑响应式
+### 2.3 考虑响应式
 
 IE6 以上浏览器，图片默认支持缩放。
 
@@ -80,7 +80,7 @@ img {
 }
 ```
 
-### 1.4 跨平台最佳 font-family
+### 2.4 跨平台最佳 font-family
 
 中文网页一直没有太多显示效果较好的字体可供选择，在「微软雅黑」之前，Windows 平台用于网页正文的简体中文字体仅有一个「中易宋体（SimSun）」。「微软雅黑」的出现似乎成了很多设计师的「救命稻草」。但「微软雅黑」自身也有诸多问题，例如：字距较小、字面宽扁、黑度偏大、字符重心不一致等。所以它实际上不适合用在大面积文字排版上，用在标题上尚可。
 
@@ -138,7 +138,7 @@ samp {
 
 如果开发者对所选字体没有充分了解，**不建议重新定义 `font-family`** 。
 
-### 1.5 解决表单渲染问题
+### 2.5 解决表单渲染问题
 
 由于表单元素是由系统渲染的控件，其 UI 表现具有特殊性。为了尽可能减少不同平台间的差异，Neat.css 中统一了大部分效果，但保留一些平台特殊的样式。比如`input[type="search"]`，保留了搜索框右边的清除按钮，方便移动设备上清除文字。
 
@@ -154,7 +154,7 @@ input[type="search"]::-webkit-search-decoration /* 1 */
 }
 ````
 
-### 1.6 面向未来
+### 2.6 面向未来
 
 Neat.css 中对一些浏览器的新特性也会提供支持，比如 HTML5 中新增的 `<dialog>` 元素。
 
@@ -195,11 +195,11 @@ dialog::backdrop{
 }
 ```
 
-## 2 定制
+## 3 定制
 
 Neat.css 目前压缩后只有 4KB 左右，对于用不到的样式对页面也不会造成影响。而且实际开发中我们并不能确定页面中会增加或减少什么元素，所以并不推荐自行定制。
 
-## 3 注意事项
+## 4 注意事项
 
 假如你的项目之前采用的是 Brix Style，甚或更早的 KISSY Reset，迁移到 Cube 时有如下注意事项：
 
