--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -1,6 +1,160 @@
 ---
 layout: post
-title: Button.css
+title: button.css
 ---
 
-TODO：介绍 .btn 与 .btn-group
+{% include cubeUsage.html %}
+
+## 概览
+
+### ```button``` 元素
+
+<div class="cube-demo">
+    <button type="button" class="btn">默认</button>
+    <button type="button" class="btn btn-primary">主要</button>
+    <button type="button" class="btn btn-success">成功</button>
+    <button type="button" class="btn btn-warning">警告</button>
+    <button type="button" class="btn btn-error">错误</button>
+</div>
+
+```html
+<button type="button" class="btn">默认</button>
+<button type="button" class="btn btn-primary">主要</button>
+<button type="button" class="btn btn-success">成功</button>
+<button type="button" class="btn btn-warning">警告</button>
+<button type="button" class="btn btn-error">错误</button>
+```
+
+
+### ```input``` 元素
+
+<div class="cube-demo">
+    <input type="button" class="btn" value="默认">
+    <input type="button" class="btn btn-primary" value="主要">
+    <input type="button" class="btn btn-success" value="成功">
+    <input type="button" class="btn btn-warning" value="警告">
+    <input type="button" class="btn btn-error" value="错误">
+</div>
+
+```html
+<input type="button" class="btn" value="默认">
+<input type="button" class="btn btn-primary" value="主要">
+<input type="button" class="btn btn-success" value="成功">
+<input type="button" class="btn btn-warning" value="警告">
+<input type="button" class="btn btn-error" value="错误">
+```
+
+
+## 带 iconfont 的按钮
+
+```html
+<button class="btn"><i class="iconfont">&#444;</i>Step In</button>
+<a class="btn" href="javascript:void(0);"><i class="iconfont">&#444;</i>Step In</a>
+```
+
+将输出：
+
+<button class="btn"><i class="iconfont">&#444;</i>Step In</button>
+<a class="btn" href="javascript:void(0);"><i class="iconfont">&#444;</i>Step In</a>
+
+## 按钮组合
+
+```html
+<div class="btn-group">
+  <button class="btn">Step1</button>
+  <button class="btn">Step2</button>
+  <button class="btn">Step3</button>
+  <button class="btn">Step4</button>
+</div>
+
+<div class="btn-group">
+  <a class="btn" href="javascript:void(0);">Step1</a>
+  <a class="btn" href="javascript:void(0);">Step2</a>
+  <a class="btn" href="javascript:void(0);">Step3</a>
+  <a class="btn" href="javascript:void(0);">Step4</a>
+</div>
+```
+
+将输出：
+
+<div class="btn-group">
+  <button class="btn">Step1</button>
+  <button class="btn">Step2</button>
+  <button class="btn">Step3</button>
+  <button class="btn">Step4</button>
+</div>
+
+<div class="btn-group">
+  <a class="btn" href="javascript:void(0);">Step1</a>
+  <a class="btn" href="javascript:void(0);">Step2</a>
+  <a class="btn" href="javascript:void(0);">Step3</a>
+  <a class="btn" href="javascript:void(0);">Step4</a>
+</div>
+
+## 各色按钮
+
+```html
+<button class="btn btn-red">Step In</button>
+<a class="btn btn-red" href="javascript:void(0);">Step In</a>
+
+<button class="btn btn-orange">Step In</button>
+<a class="btn btn-orange" href="javascript:void(0);">Step In</a>
+
+<button class="btn btn-blue">Step In</button>
+<a class="btn btn-blue" href="javascript:void(0);">Step In</a>
+```
+
+将输出：
+
+<button class="btn btn-red">Step In</button>
+<a class="btn btn-red" href="javascript:void(0);">Step In</a>
+
+<button class="btn btn-orange">Step In</button>
+<a class="btn btn-orange" href="javascript:void(0);">Step In</a>
+
+<button class="btn btn-blue">Step In</button>
+<a class="btn btn-blue" href="javascript:void(0);">Step In</a>
+
+
+## 禁用按钮
+
+```html
+<button class="btn btn-blue">Step In</button>
+<a class="btn btn-blue" href="javascript:void(0);">Step In</a>
+```
+
+将输出：
+
+<button class="btn btn-disabled">Step In</button>
+<a class="btn btn-disabled" href="javascript:void(0);">Step In</a>
+<div class="ellipsis">我是个蒸不烂煮不熟捶不扁炒不爆响珰珰一粒铜豌豆，恁子弟每谁教你钻入他锄不断斫不下解不开顿不脱慢腾腾千层锦套头。</div>
+
+## 按钮大小
+
+```html
+<button class="btn btn-size45"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-xlarge"><i class="iconfont">&#444;</i>Step In</button>
+
+<button class="btn btn-size40"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-large"><i class="iconfont">&#444;</i>Step In</button>
+
+<button class="btn btn-size30"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-medium"><i class="iconfont">&#444;</i>Step In</button>
+
+<button class="btn btn-size28"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-small"><i class="iconfont">&#444;</i>Step In</button>
+```
+
+将输出：
+
+<button class="btn btn-size45"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-xlarge"><i class="iconfont">&#444;</i>Step In</button>
+
+<button class="btn btn-size40"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-large"><i class="iconfont">&#444;</i>Step In</button>
+
+<button class="btn btn-size30"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-medium"><i class="iconfont">&#444;</i>Step In</button>
+
+<button class="btn btn-size28"><i class="iconfont">&#444;</i>Step In</button>
+<button class="btn btn-small"><i class="iconfont">&#444;</i>Step In</button>
