增加 a 作为按钮的实例

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -26,7 +26,7 @@ title: button.css
 ```
 
 
-### ```input``` 元素
+### ```input``` 元素和```a```元素
 
 <div class="cube-demo">
     <input type="button" class="btn" value="默认">
@@ -34,6 +34,12 @@ title: button.css
     <input type="button" class="btn btn-success" value="成功">
     <input type="button" class="btn btn-warning" value="警告">
     <input type="button" class="btn btn-error" value="错误">
+
+    <a href="javascript:;" class="btn">默认</a>
+    <a href="javascript:;" class="btn btn-primary">主要</a>
+    <a href="javascript:;" class="btn btn-success">成功</a>
+    <a href="javascript:;" class="btn btn-warning">警告</a>
+    <a href="javascript:;" class="btn btn-error">错误</a>
 </div>
 
 ```html
@@ -42,6 +48,12 @@ title: button.css
 <input type="button" class="btn btn-success" value="成功">
 <input type="button" class="btn btn-warning" value="警告">
 <input type="button" class="btn btn-error" value="错误">
+
+<a href="javascript:;" class="btn">默认</a>
+<a href="javascript:;" class="btn btn-primary">主要</a>
+<a href="javascript:;" class="btn btn-success">成功</a>
+<a href="javascript:;" class="btn btn-warning">警告</a>
+<a href="javascript:;" class="btn btn-error">错误</a>
 ```
 
 
