防止与 type 默认样式冲突

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -3,16 +3,13 @@ layout: post
 title: button.css
 ---
 
-{% include cubeUsage.html %}
-
 ## 概览
 
 ### ```button``` 元素
 
-<div class="cube-demo">
+<div class="type-demo">
     <button type="button" class="btn">默认</button>
     <button type="button" class="btn btn-primary">主要</button>
-    <button type="button" class="btn btn-success">成功</button>
     <button type="button" class="btn btn-warning">警告</button>
     <button type="button" class="btn btn-error">错误</button>
 </div>
@@ -20,7 +17,6 @@ title: button.css
 ```html
 <button type="button" class="btn">默认</button>
 <button type="button" class="btn btn-primary">主要</button>
-<button type="button" class="btn btn-success">成功</button>
 <button type="button" class="btn btn-warning">警告</button>
 <button type="button" class="btn btn-error">错误</button>
 ```
@@ -28,16 +24,14 @@ title: button.css
 
 ### ```input``` 元素和```a```元素
 
-<div class="cube-demo">
+<div class="type-demo">
     <input type="button" class="btn" value="默认">
     <input type="button" class="btn btn-primary" value="主要">
-    <input type="button" class="btn btn-success" value="成功">
     <input type="button" class="btn btn-warning" value="警告">
     <input type="button" class="btn btn-error" value="错误">
-
+    <br>
     <a href="javascript:;" class="btn">默认</a>
     <a href="javascript:;" class="btn btn-primary">主要</a>
-    <a href="javascript:;" class="btn btn-success">成功</a>
     <a href="javascript:;" class="btn btn-warning">警告</a>
     <a href="javascript:;" class="btn btn-error">错误</a>
 </div>
@@ -45,13 +39,11 @@ title: button.css
 ```html
 <input type="button" class="btn" value="默认">
 <input type="button" class="btn btn-primary" value="主要">
-<input type="button" class="btn btn-success" value="成功">
 <input type="button" class="btn btn-warning" value="警告">
 <input type="button" class="btn btn-error" value="错误">
-
+<br>
 <a href="javascript:;" class="btn">默认</a>
 <a href="javascript:;" class="btn btn-primary">主要</a>
-<a href="javascript:;" class="btn btn-success">成功</a>
 <a href="javascript:;" class="btn btn-warning">警告</a>
 <a href="javascript:;" class="btn btn-error">错误</a>
 ```
