--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -3,7 +3,9 @@ layout: post
 title: button.css
 ---
 
-## 概览
+## 类型
+
+使用对应语义的 class 可以快速创建一个按钮，每种类型的按钮具有不同的语义。
 
 ### ```button``` 元素
 
@@ -48,6 +50,37 @@ title: button.css
 <a href="javascript:;" class="btn btn-error">错误</a>
 ```
 
+## 大小
+
+使用不同的 class 改变按钮的大小。
+
+<div class="type-demo">
+    <p>
+        <button type="button" class="btn btn-xlarge">更大的按钮</button>
+        <button type="button" class="btn btn-xlarge btn-primary">更大的按钮</button>
+    </p>
+    <p>
+        <button type="button" class="btn btn-large">较大的按钮</button>
+        <button type="button" class="btn btn-large btn-primary">较大的按钮</button>
+    </p>
+    
+    <p>
+        <button type="button" class="btn btn-medium">一般按钮</button>
+        <button type="button" class="btn btn-medium btn-primary">一般按钮</button>
+    </p>
+    <p>
+        <button type="button" class="btn btn-small">较小的按钮</button>
+        <button type="button" class="btn btn-small btn-primary ">较小的按钮</button>
+    </p>
+    <p>
+        <button type="button" class="btn btn-xsmall">更小的按钮</button>
+        <button type="button" class="btn btn-xsmall btn-primary ">更小的按钮</button>
+    </p>
+
+</div>
+```html
+
+```
 
 ## 带 iconfont 的按钮
 
