增加默认尺寸按钮

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -50,31 +50,31 @@ title: button.css
 <a href="javascript:;" class="btn btn-error">错误</a>
 ```
 
-## 大小
+## 尺寸
 
-使用不同的 class 改变按钮的大小。
+使用不同的 class 改变按钮的尺寸。
 
 <div class="type-demo">
     <p>
-        <button type="button" class="btn btn-xlarge">更大的按钮</button>
-        <button type="button" class="btn btn-xlarge btn-primary">更大的按钮</button>
+        <button type="button" class="btn btn-xlarge">更大尺寸</button>
+        <button type="button" class="btn btn-xlarge btn-primary">更大尺寸</button>
     </p>
     <p>
-        <button type="button" class="btn btn-large">较大的按钮</button>
-        <button type="button" class="btn btn-large btn-primary">较大的按钮</button>
+        <button type="button" class="btn btn-large">较大尺寸</button>
+        <button type="button" class="btn btn-large btn-primary">较大尺寸</button>
     </p>
     
     <p>
-        <button type="button" class="btn btn-medium">一般按钮</button>
-        <button type="button" class="btn btn-medium btn-primary">一般按钮</button>
+        <button type="button" class="btn btn-medium">一般尺寸</button>
+        <button type="button" class="btn btn-medium btn-primary">一般尺寸</button>
     </p>
     <p>
-        <button type="button" class="btn btn-small">较小的按钮</button>
-        <button type="button" class="btn btn-small btn-primary ">较小的按钮</button>
+        <button type="button" class="btn btn-small">较小尺寸</button>
+        <button type="button" class="btn btn-small btn-primary ">较小尺寸</button>
     </p>
     <p>
-        <button type="button" class="btn btn-xsmall">更小的按钮</button>
-        <button type="button" class="btn btn-xsmall btn-primary ">更小的按钮</button>
+        <button type="button" class="btn btn-xsmall">默认尺寸</button>
+        <button type="button" class="btn btn-xsmall btn-primary ">默认尺寸</button>
     </p>
 
 </div>
