--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -73,14 +73,49 @@ title: button.css
         <button type="button" class="btn btn-small btn-primary ">较小尺寸</button>
     </p>
     <p>
-        <button type="button" class="btn btn-xsmall">默认尺寸</button>
-        <button type="button" class="btn btn-xsmall btn-primary ">默认尺寸</button>
+        <button type="button" class="btn btn-xsmall">更小尺寸</button>
+        <button type="button" class="btn btn-xsmall btn-primary ">更小尺寸</button>
     </p>
-
+    <p>
+        <button type="button" class="btn">默认尺寸</button>
+        <button type="button" class="btn btn-primary ">默认尺寸</button>
+    </p>
 </div>
 ```html
+<p>
+    <button type="button" class="btn btn-xlarge">更大尺寸</button>
+    <button type="button" class="btn btn-xlarge btn-primary">更大尺寸</button>
+</p>
+<p>
+    <button type="button" class="btn btn-large">较大尺寸</button>
+    <button type="button" class="btn btn-large btn-primary">较大尺寸</button>
+</p>
 
+<p>
+    <button type="button" class="btn btn-medium">一般尺寸</button>
+    <button type="button" class="btn btn-medium btn-primary">一般尺寸</button>
+</p>
+<p>
+    <button type="button" class="btn btn-small">较小尺寸</button>
+    <button type="button" class="btn btn-small btn-primary ">较小尺寸</button>
+</p>
+<p>
+    <button type="button" class="btn btn-xsmall">更小尺寸</button>
+    <button type="button" class="btn btn-xsmall btn-primary ">更小尺寸</button>
+</p>
+<p>
+    <button type="button" class="btn">默认尺寸</button>
+    <button type="button" class="btn btn-primary ">默认尺寸</button>
+</p>
 ```
+
+还可以添加```btn-block```创建一个100%宽度的按钮。
+<div class="type-demo">
+    <div class="well" style="width: 360px; margin: auto; background-color: #ddd;">
+        <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
+        <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
+    </div>
+</div>
 
 ## 带 iconfont 的按钮
 
