--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -111,7 +111,7 @@ title: button.css
 
 还可以添加```btn-block```创建一个100%宽度的按钮。
 <div class="type-demo">
-    <div class="well" style="width: 360px; margin: auto; padding:10px 0; background-color: #eee;">
+    <div class="well" style="width: 360px; margin: auto;">
         <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
         <button type="button" class="btn btn-block btn-large btn-primary">按钮变为块级元素</button>
     </div>
