update button demo

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -109,13 +109,14 @@ title: button.css
 </p>
 ```
 
-还可以添加```btn-block```创建一个100%宽度的按钮。
+还可以添加 class```.btn-block```创建一个 100% 宽度的按钮。
 <div class="type-demo">
     <div class="well" style="width: 360px; margin: auto;">
         <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
         <button type="button" class="btn btn-block btn-large btn-primary">按钮变为块级元素</button>
     </div>
 </div>
+
 ```html
 <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
 <button type="button" class="btn btn-block btn-large btn-primary">按钮变为块级元素</button>
