增加按钮图标

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -3,7 +3,7 @@ layout: post
 title: button.css
 ---
 
-## 类型
+## 按钮类型
 
 使用对应语义的 class 可以快速创建一个按钮，每种类型的按钮具有不同的语义。
 
@@ -50,7 +50,7 @@ title: button.css
 <a href="javascript:;" class="btn btn-error">错误</a>
 ```
 
-## 尺寸
+## 按钮尺寸
 
 使用不同的 class 改变按钮的尺寸。
 
@@ -110,29 +110,40 @@ title: button.css
 ```
 
 还可以添加 class```.btn-block```创建一个 100% 宽度的按钮。
+
 <div class="type-demo">
     <div class="well" style="width: 360px; margin: auto;">
         <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
         <button type="button" class="btn btn-block btn-large btn-primary">按钮变为块级元素</button>
     </div>
 </div>
-
 ```html
 <button type="button" class="btn btn-block btn-large">按钮变为块级元素</button>
 <button type="button" class="btn btn-block btn-large btn-primary">按钮变为块级元素</button>
 ```
 
-## 带 iconfont 的按钮
-
+## 按钮图标
+<div class="type-demo">
+    <p>
+        <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+        <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+    </p>
+    <p>
+        <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+        <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+    </p>
 ```html
-<button class="btn"><i class="iconfont">&#444;</i>Step In</button>
-<a class="btn" href="javascript:void(0);"><i class="iconfont">&#444;</i>Step In</a>
+<p>
+    <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+    <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+</p>
+<p>
+    <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+    <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+</p>
 ```
+</div>
 
-将输出：
-
-<button class="btn"><i class="iconfont">&#444;</i>Step In</button>
-<a class="btn" href="javascript:void(0);"><i class="iconfont">&#444;</i>Step In</a>
 
 ## 按钮组合
 
