修改按钮图标demo

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -125,13 +125,14 @@ title: button.css
 ## 按钮图标
 <div class="type-demo">
     <p>
-        <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+        <button class="btn btn-large"><b class="iconfont">&#126;</b>提交</button>
         <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
     </p>
     <p>
         <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
-        <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+        <button class="btn btn-large btn-primary"><b class="iconfont">&#61464;</b>Github 登陆</button>
     </p>
+</div>
 ```html
 <p>
     <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
@@ -142,7 +143,6 @@ title: button.css
     <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
 </p>
 ```
-</div>
 
 
 ## 按钮组合
