增加不同尺寸按钮图标演示

--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -55,58 +55,44 @@ title: button.css
 使用不同的 class 改变按钮的尺寸。
 
 <div class="type-demo">
-    <p>
-        <button type="button" class="btn btn-xlarge">更大尺寸</button>
-        <button type="button" class="btn btn-xlarge btn-primary">更大尺寸</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-large">较大尺寸</button>
-        <button type="button" class="btn btn-large btn-primary">较大尺寸</button>
-    </p>
-    
-    <p>
-        <button type="button" class="btn btn-medium">一般尺寸</button>
-        <button type="button" class="btn btn-medium btn-primary">一般尺寸</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-small">较小尺寸</button>
-        <button type="button" class="btn btn-small btn-primary ">较小尺寸</button>
-    </p>
-    <p>
-        <button type="button" class="btn btn-xsmall">更小尺寸</button>
-        <button type="button" class="btn btn-xsmall btn-primary ">更小尺寸</button>
-    </p>
-    <p>
-        <button type="button" class="btn">默认尺寸</button>
-        <button type="button" class="btn btn-primary ">默认尺寸</button>
-    </p>
-</div>
-```html
-<p>
     <button type="button" class="btn btn-xlarge">更大尺寸</button>
     <button type="button" class="btn btn-xlarge btn-primary">更大尺寸</button>
-</p>
-<p>
+    <br>
     <button type="button" class="btn btn-large">较大尺寸</button>
     <button type="button" class="btn btn-large btn-primary">较大尺寸</button>
-</p>
-
-<p>
+    <br>
     <button type="button" class="btn btn-medium">一般尺寸</button>
     <button type="button" class="btn btn-medium btn-primary">一般尺寸</button>
-</p>
-<p>
+    <br>
     <button type="button" class="btn btn-small">较小尺寸</button>
-    <button type="button" class="btn btn-small btn-primary">较小尺寸</button>
-</p>
-<p>
+    <button type="button" class="btn btn-small btn-primary ">较小尺寸</button>
+    <br>
     <button type="button" class="btn btn-xsmall">更小尺寸</button>
-    <button type="button" class="btn btn-xsmall btn-primary">更小尺寸</button>
-</p>
-<p>
+    <button type="button" class="btn btn-xsmall btn-primary ">更小尺寸</button>
+    <br>
     <button type="button" class="btn">默认尺寸</button>
-    <button type="button" class="btn btn-primary">默认尺寸</button>
-</p>
+    <button type="button" class="btn btn-primary ">默认尺寸</button>
+    <br>
+</div>
+```html
+<button type="button" class="btn btn-xlarge">更大尺寸</button>
+<button type="button" class="btn btn-xlarge btn-primary">更大尺寸</button>
+<br>
+<button type="button" class="btn btn-large">较大尺寸</button>
+<button type="button" class="btn btn-large btn-primary">较大尺寸</button>
+<br>
+<button type="button" class="btn btn-medium">一般尺寸</button>
+<button type="button" class="btn btn-medium btn-primary">一般尺寸</button>
+<br>
+<button type="button" class="btn btn-small">较小尺寸</button>
+<button type="button" class="btn btn-small btn-primary ">较小尺寸</button>
+<br>
+<button type="button" class="btn btn-xsmall">更小尺寸</button>
+<button type="button" class="btn btn-xsmall btn-primary ">更小尺寸</button>
+<br>
+<button type="button" class="btn">默认尺寸</button>
+<button type="button" class="btn btn-primary ">默认尺寸</button>
+<br>
 ```
 
 还可以添加 class```.btn-block```创建一个 100% 宽度的按钮。
@@ -124,24 +110,22 @@ title: button.css
 
 ## 按钮图标
 <div class="type-demo">
-    <p>
-        <button class="btn btn-large"><b class="iconfont">&#126;</b>提交</button>
-        <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
-    </p>
-    <p>
-        <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
-        <button class="btn btn-large btn-primary"><b class="iconfont">&#61464;</b>Github 登陆</button>
-    </p>
+<button class="btn btn-large"><b class="iconfont">&#126;</b>提交</button>
+<button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+<br>
+<button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+<button class="btn btn-xsmall"><b class="iconfont">&#61464;</b>Github 登陆</button>
+<button class="btn btn-small"><b class="iconfont">&#61464;</b>Github 登陆</button>
+<button class="btn btn-medium"><b class="iconfont">&#61464;</b>Github 登陆</button>
+<button class="btn btn-large btn-primary"><b class="iconfont">&#61464;</b>Github 登陆</button>
+<button class="btn btn-xlarge btn-primary"><b class="iconfont">&#61464;</b>Github 登陆</button>
 </div>
 ```html
-<p>
-    <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
-    <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
-</p>
-<p>
-    <button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
-    <button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
-</p>
+<button class="btn btn-large"><b class="iconfont">&#126;</b>提交</button>
+<button class="btn btn-large btn-primary"><b class="iconfont">&#126;</b>提交</button>
+<br>
+<button class="btn"><b class="iconfont">&#61464;</b>Github 登陆</button>
+<button class="btn btn-large btn-primary"><b class="iconfont">&#61464;</b>Github 登陆</button>
 ```
 
 
