--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -130,103 +130,33 @@ title: button.css
 
 
 ## 按钮组合
-
+<div class="type demo">
+    <div class="btn-group">
+      <button class="btn btn-medium">Step1</button>
+      <button class="btn btn-medium">Step2</button>
+      <button class="btn btn-medium">Step3</button>
+      <button class="btn btn-medium">Step4</button>
+    </div>
+</div>
 ```html
 <div class="btn-group">
-  <button class="btn">Step1</button>
-  <button class="btn">Step2</button>
-  <button class="btn">Step3</button>
-  <button class="btn">Step4</button>
-</div>
-
-<div class="btn-group">
-  <a class="btn" href="javascript:void(0);">Step1</a>
-  <a class="btn" href="javascript:void(0);">Step2</a>
-  <a class="btn" href="javascript:void(0);">Step3</a>
-  <a class="btn" href="javascript:void(0);">Step4</a>
+    <button class="btn btn-medium">Step1</button>
+    <button class="btn btn-medium">Step2</button>
+    <button class="btn btn-medium">Step3</button>
+    <button class="btn btn-medium">Step4</button>
 </div>
 ```
 
-将输出：
-
-<div class="btn-group">
-  <button class="btn">Step1</button>
-  <button class="btn">Step2</button>
-  <button class="btn">Step3</button>
-  <button class="btn">Step4</button>
+## 按钮禁用
+<div class="demo">
+    <button class="btn btn-disabled">禁用</button>
+    <button class="btn btn-disabled btn-primary">禁用</button>
 </div>
-
-<div class="btn-group">
-  <a class="btn" href="javascript:void(0);">Step1</a>
-  <a class="btn" href="javascript:void(0);">Step2</a>
-  <a class="btn" href="javascript:void(0);">Step3</a>
-  <a class="btn" href="javascript:void(0);">Step4</a>
-</div>
-
-## 各色按钮
-
 ```html
-<button class="btn btn-red">Step In</button>
-<a class="btn btn-red" href="javascript:void(0);">Step In</a>
-
-<button class="btn btn-orange">Step In</button>
-<a class="btn btn-orange" href="javascript:void(0);">Step In</a>
-
-<button class="btn btn-blue">Step In</button>
-<a class="btn btn-blue" href="javascript:void(0);">Step In</a>
+<button class="btn btn-disabled">禁用</button>
+<button class="btn btn-disabled btn-primary">禁用</button>>
 ```
 
-将输出：
-
-<button class="btn btn-red">Step In</button>
-<a class="btn btn-red" href="javascript:void(0);">Step In</a>
-
-<button class="btn btn-orange">Step In</button>
-<a class="btn btn-orange" href="javascript:void(0);">Step In</a>
-
-<button class="btn btn-blue">Step In</button>
-<a class="btn btn-blue" href="javascript:void(0);">Step In</a>
 
 
-## 禁用按钮
 
-```html
-<button class="btn btn-blue">Step In</button>
-<a class="btn btn-blue" href="javascript:void(0);">Step In</a>
-```
-
-将输出：
-
-<button class="btn btn-disabled">Step In</button>
-<a class="btn btn-disabled" href="javascript:void(0);">Step In</a>
-<div class="ellipsis">我是个蒸不烂煮不熟捶不扁炒不爆响珰珰一粒铜豌豆，恁子弟每谁教你钻入他锄不断斫不下解不开顿不脱慢腾腾千层锦套头。</div>
-
-## 按钮大小
-
-```html
-<button class="btn btn-size45"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-xlarge"><i class="iconfont">&#444;</i>Step In</button>
-
-<button class="btn btn-size40"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-large"><i class="iconfont">&#444;</i>Step In</button>
-
-<button class="btn btn-size30"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-medium"><i class="iconfont">&#444;</i>Step In</button>
-
-<button class="btn btn-size28"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-small"><i class="iconfont">&#444;</i>Step In</button>
-```
-
-将输出：
-
-<button class="btn btn-size45"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-xlarge"><i class="iconfont">&#444;</i>Step In</button>
-
-<button class="btn btn-size40"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-large"><i class="iconfont">&#444;</i>Step In</button>
-
-<button class="btn btn-size30"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-medium"><i class="iconfont">&#444;</i>Step In</button>
-
-<button class="btn btn-size28"><i class="iconfont">&#444;</i>Step In</button>
-<button class="btn btn-small"><i class="iconfont">&#444;</i>Step In</button>
