--- a/doc/_posts/2013-12-17-button.md
+++ b/doc/_posts/2013-12-17-button.md
@@ -130,7 +130,7 @@ title: button.css
 
 
 ## 按钮组合
-<div class="type demo">
+<div class="type-demo">
     <div class="btn-group">
       <button class="btn btn-medium">Step1</button>
       <button class="btn btn-medium">Step2</button>
@@ -148,7 +148,7 @@ title: button.css
 ```
 
 ## 按钮禁用
-<div class="demo">
+<div class="type-demo">
     <button class="btn btn-disabled">禁用</button>
     <button class="btn btn-disabled btn-primary">禁用</button>
 </div>
