增加 inline-block 文档

--- a/doc/_posts/2013-12-17-layout.md
+++ b/doc/_posts/2013-12-17-layout.md
@@ -2,5 +2,24 @@
 layout: post
 title: Layout.css
 ---
+cube 中并没有提供大而全的栅格系统，这不是 cube 的出发点。相反，我们提供细节颗粒化的布局工具，方便自由使用。
 
-（栅格、常用布局解决方案、如何 Mobile First 等）
+## inline-block 组件
+float 在 IE6、7 中有许多臭名昭著的 Bug，在布局上，YUI则是完全用 inline-block 代替 float 来做栅格。
+
+换行符会到导致两个 inline-block 元素之间产生空隙，cube 中为了解决这个问题，需要在父级元素使用```dib-box```这个 class，每个 inline-block 元素使用```dib```
+
+<div class="type-demo">
+    <div class="dib-box">
+        <span class="dib">span 元素</span>
+        <div class="dib">div 元素</div>
+        <p class="dib">p 元素</p>
+    </div>
+</div>
+```html
+<div class="dib-box">
+    <span class="dib">span 元素</span>
+    <div class="dib">div 元素</div>
+    <p class="dib">p 元素</p>
+</div>
+```
