增加 两端对齐 文档

--- a/doc/_posts/2013-12-17-layout.md
+++ b/doc/_posts/2013-12-17-layout.md
@@ -5,21 +5,53 @@ title: Layout.css
 cube 中并没有提供大而全的栅格系统，这不是 cube 的出发点。相反，我们提供细节颗粒化的布局工具，方便自由使用。
 
 ## inline-block 组件
-float 在 IE6、7 中有许多臭名昭著的 Bug，在布局上，YUI则是完全用 inline-block 代替 float 来做栅格。
-
-换行符会到导致两个 inline-block 元素之间产生空隙，cube 中为了解决这个问题，需要在父级元素使用```dib-box```这个 class，每个 inline-block 元素使用```dib```
+Float 在 IE6、7 中有许多臭名昭著的 Bug，很多时候可以用 inline-block 来代替。YUI则是完全用 inline-block 来做栅格。
 
 <div class="type-demo">
     <div class="dib-box">
-        <span class="dib">span 元素</span>
-        <div class="dib">div 元素</div>
-        <p class="dib">p 元素</p>
+        <span class="dib" style="border: 1px solid #ccc;padding:5px 0;">span 元素</span>
+        <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
     </div>
 </div>
 ```html
 <div class="dib-box">
-    <span class="dib">span 元素</span>
-    <div class="dib">div 元素</div>
-    <p class="dib">p 元素</p>
+    <span class="dib" style="border: 1px solid #ccc;padding:5px 0;">span 元素</span>
+    <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
+</div>
+```
+
+换行符会到导致两个 inline-block 元素之间产生空隙，cube 中为了解决这个问题，需要两个步骤：
+
+1. 在父级元素使用```dib-box```这个 class，也就是设置```font-size: 0;```
+2. 每个 inline-block 元素使用```dib```，font-size 重置为默认的 12px。
+
+所以需要注意的是如果想为每个 inline-block 元素设置不同的 font-size，需要这样重置，保证下面的样式会覆盖```.dib-box .dib```的设置。
+
+```css
+.foo .dib-box .dib {
+    font-size: 14px;
+}
+```
+
+## 两端对齐布局
+
+两端对齐是指一行内第一个元素左对齐，最后一个元素右对齐的布局方式。通常可以使用```float:left```和```float:right```。
+
+但使用浮动无法很好的控制在垂直方向上的对齐，为此，cube 中以 inline-block 组件为基础，形成了独有的两端对齐自适应模块。
+
+只需要在父元素使用 class ```justify```，内部使用```dib```即可，兼容 IE6+。
+
+<div class="type-demo">
+    <div class="justify well">
+        <span class="dib" style="border: 1px solid #ccc;padding:5px 0;">span 元素</span>
+        <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
+        <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
+    </div>
+</div>
+```html
+<div class="justify well">
+    <span class="dib" style="border: 1px solid #ccc;padding:5px 0;">span 元素</span>
+    <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
+    <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
 </div>
 ```
