更新 两端对齐 demo

--- a/doc/_posts/2013-12-17-layout.md
+++ b/doc/_posts/2013-12-17-layout.md
@@ -43,15 +43,13 @@ Float 在 IE6、7 中有许多臭名昭著的 Bug，很多时候可以用 inline
 
 <div class="type-demo">
     <div class="justify well">
-        <span class="dib" style="border: 1px solid #ccc;padding:5px 0;">span 元素</span>
-        <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
-        <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
+        <h5 class="dib" sytle="vertical-align: baseline;font-size:36px;">标题</h5>
+        <a class="dib" href="###" sytle="vertical-align: baseline;">更多…</a>
     </div>
 </div>
 ```html
 <div class="justify well">
-    <span class="dib" style="border: 1px solid #ccc;padding:5px 0;">span 元素</span>
-    <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
-    <div class="dib" style="border: 1px solid #ccc;padding:5px 0;">div 元素</div>
+    <h5 class="dib" sytle="vertical-align: baseline;font-size:36px;">标题</h5>
+    <a class="dib" href="###" sytle="vertical-align: baseline;">更多…</a>
 </div>
 ```
