增加 箭头 文档

--- a/doc/_posts/2013-12-17-layout.md
+++ b/doc/_posts/2013-12-17-layout.md
@@ -42,14 +42,29 @@ Float 在 IE6、7 中有许多臭名昭著的 Bug，很多时候可以用 inline
 只需要在父元素使用 class ```justify```，内部使用```dib```即可，兼容 IE6+。
 
 <div class="type-demo">
-    <div class="justify well">
-        <h5 class="dib" sytle="vertical-align: baseline;font-size:36px;">标题</h5>
+    <div class="justify" style="border-bottom: 1px solid #999;height: 50px;">
+        <div class="dib" sytle="vertical-align: baseline;font-size: 36px;">标题</div>
         <a class="dib" href="###" sytle="vertical-align: baseline;">更多…</a>
     </div>
 </div>
 ```html
-<div class="justify well">
-    <h5 class="dib" sytle="vertical-align: baseline;font-size:36px;">标题</h5>
+<div class="justify" style="border-bottom: 1px solid #999;height: 50px;">
+    <div class="dib" sytle="vertical-align: baseline;font-size: 36px;">标题</div>
     <a class="dib" href="###" sytle="vertical-align: baseline;">更多…</a>
 </div>
 ```
+
+## CSS模拟三角形
+
+CSS可以通过 border 来模拟三角形箭头，需要注意的是，IE6 中需要使用```border-style:dashed```才能达到透明的效果。
+
+<div class="type-demo">
+    <p><code>.arrow-top</code><b class="arrow arrow-top"></b></p>
+    <p><code>.arrow-bottom</code><b class="arrow arrow-top"></b></p>
+    <p><code>.arrow-left</code><b class="arrow arrow-top"></b></p>
+    <p><code>.arrow-right</code><b class="arrow arrow-right"></b></p>
+    <p><code>.arrow-left-top</code><b class="arrow arrow-left-top"></b></p>
+    <p><code>.arrow-right-top</code><b class="arrow arrow-right-top"></b></p>
+    <p><code>.arrow-left-bottom</code><b class="arrow arrow-left-bottom"></b></p>
+    <p><code>.arrow-right-bottom</code><b class="arrow arrow-right-bottom"></b></p>
+</div>
