文档字体与源码中统一为 Arial

--- a/doc/_posts/2013-12-17-neat.md
+++ b/doc/_posts/2013-12-17-neat.md
@@ -98,7 +98,7 @@ img {
 
 2. 西文字体选择如下：
 
-* Windows 优先使用「Tahoma」。
+* Windows 优先使用「Arial」。
 * OS X 优先使用「Helvetica Neue」
 
 ```css
@@ -115,7 +115,7 @@ input, /* 1 */
 select, /* 1 */
 textarea  /* 1 */
 {
-    font-family: 'helvetica neue',tahoma,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;
+    font-family: 'helvetica neue',arial,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;
 }
 ```
 
