--- a/doc/_posts/2013-12-17-iconfont.md
+++ b/doc/_posts/2013-12-17-iconfont.md
@@ -3,5 +3,5 @@ layout: post
 title: IconFont
 ---
 
-Cube 1.3 抛弃了之前庞大臃肿的 iconfont 全量的字体，现在我们推荐使用 [MUX Iconfont 平台](http://iconfont.cn/)
-对图标进行定制管理。参考文档[1.3 个人图标管理](http://iconfont.cn/help/platform.html)
+Cube 1.3 抛弃了之前庞大臃肿的 iconfont 全量的字体，现在我们推荐使用 MUX [Iconfont 平台](http://iconfont.cn/)
+对图标进行定制管理。参考文档 1.3 节[个人图标管理](http://iconfont.cn/help/platform.html)
